syntax = "proto3";

package eece513;

option java_package = "eece513";
option java_outer_classname = "Actions";

message Request {
    enum Type{
        JOIN = 0;
        REMOVE = 1;
        DROP = 2;
        CONNECT = 3;
        HEARTBEAT = 4;
    }

    Type type = 1;
    Timestamp timestamp = 2;
    string hostName = 3;
    int32 port = 4;
}

message Timestamp {
    int64 secondsSinceEpoch = 1;
    int32 nanoSeconds = 2;
}

message MembershipList {
    repeated Membership node = 1;
}

message Membership {
    Timestamp timestamp = 1;
    string hostName = 2;
    int32 port = 3;
}

